--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,6 +9,7 @@
     android:id="@+id/fullscreen_content"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="#838BC34A"
     android:gravity="fill"
     android:keepScreenOn="true"
     android:src="@drawable/splash" />
