--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,6 +11,12 @@
     app:showAsAction="always" />
 
   <item
+    android:id="@+id/item_map"
+    android:icon="@android:drawable/ic_menu_mapmode"
+    android:title="@string/menu_mapView"
+    app:showAsAction="always"/>
+
+  <item
     android:id="@+id/user_settings"
     android:icon="@android:drawable/ic_menu_preferences"
     android:title="@string/user_settings"
